--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 10/30/2013 ==
+Uleat: Added clientlimits.h and clientlimits.cpp. These incorporate a new namespace 'Limits' used to access client-specific values. More information can be found within these files.
+Notes:
+	- Corpse::MakeLootRequestPackets() has been updated to use this new system.
+	- With the updates to the PlayerProfile_struct active, Limits::PlayerProfile::SkillCount(client_version) can be implemented into existing code (see notes in '../common/skill.h')
+Uleat: Changed the RoF patch files to RoF1. Also added RoF2 patch files in preparation for adding the new client, but they are not registered. They will be activated once all of the conversions are finished.
+(If your RoF clients can't log in, you forget to copy the renamed op_code file to your server directory.)
+
 == 10/28/2013 ==
 Uleat: Client patch prep work for extending usable skill range (no apparent issues with Ti through RoF[12-10-2012] testing - i.e., clients showed proper skills and they didn't crash)
 Uleat: This final patch aligns the existing server PlayerProfile_Struct with the previous changes. The pp_struct, as well as the character 'pp' blob, remains unchanged in size and alignment. The only difference is that the first trailing 100 bytes of the unknown array have been re-assigned to the skills array, and the unknown array decreased by the same amount.
